# learning-platform-api

./: .env.example  Dockerfile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
alembic/versions/: 1701d2f56b43_drop_is_superuser_column_from_user.py  b2c3d4e5f6a7_add_course_junction_tables.py  c3d4e5f6a7b8_rating_1_to_5_one_decimal.py  e701560addde_create_courses_table.py
app/: config.py  main.py
app/api/: router.py
app/auth/: backend.py  routes.py
app/auth/errors/: __init__.py  handlers.py  types.py
app/courses/: error_codes.py  exceptions.py  models.py  router.py  routes.py  schemas.py  service.py
app/courses/errors/: __init__.py  handlers.py  types.py
app/courses/tests/: test_create_course_api.py  test_create_course_service.py  test_delete_course_api.py  test_delete_course_service.py  test_enroll_api.py  test_get_course_by_id_api.py  test_get_courses_api.py  test_get_courses_service.py  test_rate_api.py  test_schemas.py  (+3 more)
app/tests/: helpers.py  test_e2e.py  test_exceptions.py  test_security.py  test_smoke.py
app/users/: manager.py  models.py  router.py  routes.py  schemas.py
bruno/courses/: course-delete.yml  course-get.yml  course-rate.yml  course-update.yml  courses-get.yml
docs/: commands.md  conventions.md  steps.md
docs/config/: email-setup.md  fastapi-users-setup.md  sqlalchemy-alembic-async-setup.md  test-speed.md
docs/db/: courses-model-design.md
docs/questions/: test-types.md
docs/wiki/: fastapi-auth-options.md
(+13 files in other folders)
